<resources>
    <string name="app_name">HULO</string>
    <string name="action_heart">HEART</string>
    <string name="action_character">CHARACTER</string>
    <string name="action_chat">CHAT</string>
    <string name="action_setting">SETTING</string>
    <string name="action_bot">BOT</string>
    <string name="type_a_message">Type a message…</string>
    <string name="hearts">HEARTS</string>
    <string name="add">Add</string>
    <string name="bots">BOTS</string>
    <string name="chat_title">CHATS</string>
    <string name="characters">CHARACTERS</string>
    <string name="final_reply">Final reply</string>
    <string name="interaction_list">Interaction list</string>
    <string name="reply_patterns">Reply patterns</string>
    <string name="setting">SETTING</string>
    <string name="theme">Theme</string>
    <string name="trigger_words">Trigger words</string>
    <string name="back">back</string>
    <string name="cancel">CANCEL</string>
    <string name="send">send</string>
    <string name="avatar">avatar</string>
    <string name="zodiac">Zodiac</string>
    <string name="address">Address</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="other_info">Other Info</string>
    <string name="short_introduction">Short Introduction</string>
    <string name="enter_name">Enter Name</string>
    <string name="basic_information">Basic information</string>
    <string name="save">save</string>
    <string name="heart_name">Heart name</string>
    <string name="description">Description</string>
    <string name="interaction_editing">Interaction editing</string>
    <string name="create_and_edit_interaction">Create and edit interaction</string>
    <string name="edit_heart">Edit Heart</string>
    <string name="name_heart">Name Heart</string>
    <string name="description_heart">Description heart</string>
    <string name="trigger_and_reply">Trigger and reply</string>
    <string name="interaction">Interaction</string>
    <string name="edit_content">Edit content</string>
    <string name="remove">Remove</string>
    <string name="add_interaction">Add Interaction</string>
    <string name="please_input_a_trigger_word">Please input a trigger word</string>
    <string name="ok">OK</string>
    <string name="add_heart">Add Heart</string>
    <string name="select_your_character">Select Your Character</string>
    <string name="select_character_type">Select Character Type</string>
    <string name="heart_make_all_by_myself">HEART (Make All By Myself)</string>
    <string name="ai">AI</string>
    <string name="edit_final_reply">Edit Final Reply</string>
    <string name="please_input_a_final_reply">Please input a final reply</string>
    <string name="delete">DELETE</string>
    <string name="item">item</string>
    <string name="appear">appear</string>
    <string name="heart_or_bot">Heart Or Bot</string>
    <string name="name_display_here">Name Display Here</string>
    <string name="status_displays_here">Status Displays here</string>
    <string name="character_name">Character Name</string>
    <string name="word">Word</string>
    <string name="_12_00am">12:00AM</string>
    <string name="sender_message_display_here">Sender Message Display Here</string>
</resources>