<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_round_corner_assignment_alert">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_final_reply"
        android:textSize="24sp"
        android:textColor="?attr/root"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_a_final_reply"
        android:minHeight="48dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:inputType="text" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/btn_delete"
            android:text="@string/ok"
            android:textColor="?attr/root"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_ok"
            android:text="@string/cancel"
            android:textColor="?attr/root"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="?attr/root"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>