<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_round_corner_assignment_alert">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_character_type"
        android:textSize="24sp"
        android:textColor="?attr/root"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/choose_heart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heart_make_all_by_myself"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/choose_ai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ai"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/btn_cancel_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"
        android:textColor="?attr/root"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_gravity="right"/>

</LinearLayout>