<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="12dp"
        android:text="Character"
        android:textColor="?attr/root"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_save_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:contentDescription="@string/save"
        android:padding="12dp"
        android:src="@drawable/outline_save_alt_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_character"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_title"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/basic_information"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_Avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="55dp">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image_person"
                android:contentDescription="@string/avatar" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:id="@+id/type_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=""
            android:textColor="?attr/root" />

        <Spinner
            android:id="@+id/spn_type_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/short_introduction"
            android:textColor="?attr/root" />

        <EditText
            android:id="@+id/short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_introduction"
            android:minHeight="48dp"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_title"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:text="@string/other_info"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/title_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/gender"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/title_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/birthday"
                android:minHeight="48dp"
                android:inputType="text"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/title_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/height"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/title_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/weight"
                android:minHeight="48dp"
                android:inputType="text"
                android:autofillHints=""
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/title_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/address"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/title_zodiac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/zodiac"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/zodiac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/zodiac"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>