<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/theme">

    <TextView
        android:id="@+id/title_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/setting"
        android:textColor="?attr/root"
        android:textSize="20sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/title_setting"
        android:descendantFocusability="blocksDescendants"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="-5dp">

            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/card_view_Avatar"
                android:text="@string/theme"
                android:textColor="#0b0b0b"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="55dp">

                <ImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/format_paint_48px"
                    android:contentDescription="@string/add" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/character_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/add"
            android:minWidth="32dp"
            android:minHeight="48dp"
            android:src="@drawable/circle_48px" />
    </RelativeLayout>

</RelativeLayout>